SERVER-49909 Error if resharding's oplog application sees an unexpected oplog entry